# cmake-vcpkg-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: Document.h
lib/src/: Document.cpp
lib/test/: CMakeLists.txt  Tests.cpp
